--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,7 +2,8 @@
   "compilerOptions": {
     "paths": {
       "@/*": ["./src/*"],
-      "@components/*": ["./src/app/components/*"]
+      "@components/*": ["./src/app/components/*"],
+      "@styles/*": ["./src/app/styles/*"]
     }
   }
 }
